--- a/frontend/components/editMessage/editMessage.styl
+++ b/frontend/components/editMessage/editMessage.styl
@@ -1,73 +1,133 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
-.post-message-wrapper
-  width 50%
-  //border 1px solid #7986CB
-  border-radius 10px
-  position absolute
-  top 100px
-  left 30%
-  margin-bottom 50px
-  background-color #DADFE1
-  .header-setup
-    display flex
-    justify-content center
-    margin-top 20px
-    .return-btn
-      i
-        margin 5px
-    hr
-      width 80%
-      height 1px
-      background-color #EF6C00
-      margin-left 0
+.edit-message-wrapper
+    main-component()
+    min-width 400px
+    h1
+        header-style()
+        @media only screen  and (max-width : 430px), screen and (max-device-width: 430px)
+            text-align right
+        position relative
+        .return-btn
+            cursor pointer
+            display flex
+            align-items center
+            position absolute
+            font-size 20px
+            top 0
+            left 15%
+            i
+                font-size 48px
+                color #337ab7
+            a
+                text-decoration none
+                margin-left 10px
+            @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+                left 10%
+                a
+                    display none
+            @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+                left 0
+    input
+        outline none
+        border none
+        border-radius 4px
+        background-color disable-input
+        border-bottom 4px solid border-color
+        width 80%
+        font-size 25px
+        padding 5px
+        display block
+        color text-input
+        text-align center
+        margin 50px auto 5px
+        &:focus
+            background-color active-input
+        &:focus::-webkit-input-placeholder
+            color transparent
+        &:focus::-moz-placeholder
+            color transparent
+        &:focus:-ms-input-placeholder
+            color transparent
+        &:focus:-moz-placeholder
+            color transparent
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+    .invalid_info
+        width 80%
+        margin 0 auto 30px
+        min-height 20px
+        cursor pointer
+        &:hover
+            p
+                opacity 1
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        p
+            transition opacity 0.3s ease-out
+            display inline-block
+            margin 0 7px
+            opacity 0.5
+            color #e57373
+        
 
-  input
-    width 100%
-    font-size 25px
+    .mesgDescription
+        width 80%
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        margin 15px auto 5px
+        position relative
+        .mesgEditor
+            width 100%
+            text-align left
+            padding 2em
+            font-size 1.3em
+            min-height 150px
+            font-family "Montserrat"
+            background-color disable-input
+            border-radius 12px
+            color text-input
+            border-bottom 4px solid border-color
+            outline none
+            &.placeholder
+                &:after
+                    display block
+            &:focus
+                background-color active-input
+                &:after
+                    display none
 
-  .input-block
-    margin-left 10%
-    margin-bottom 50px
-    textarea
-      width 70%
-      font-size 1.6em
-      resize none
-      font-family "Open Sans"
-    .img-block
-      width 8%
-      position absolute
-      left 74.5%
-      img
-        width 64%
-        margin-left 18%
-    div
-      background-color #ffcc80
-      width 71%
-      text-align center
-  .draft-post
-    select
-      font-size 1.6em
-      width 25%
-      margin-left 10%
-      margin-right 14%
-  .sendButtons
-      display flex
-      flex-direction row
-      justify-content space-around
-      flex-wrap wrap
-      margin 15px
-    .postBtn
-      button()
-      font-family "Montserrat"
-      font-size 24px
-      padding 5px 40px
-      --box-shadow-color #004D40
-      background-color #2e8f35
-    .delete
-      button()
-      font-family "Montserrat"
-      font-size 24px
-      padding 5px 30px
-      --box-shadow-color #ab3c3c
-      background-color #FF5252
+            &:after
+                content 'Your message'
+                position absolute
+                top 50%
+                left 50%
+                font-size 1.3em
+                pointer-events none
+                display none
+                color gray
+                font-family "Montserrat"
+                opacity 0.7
+                transform translateX(-50%) translateY(-50%)
+            
+        
+    .saveBtn
+        display flex
+        justify-content center
+        align-content center
+        button
+            align-self center
+            display flex
+            justify-content center
+            button()
+            font-family "Montserrat"
+            font-size 24px
+            padding 15px 75px
+            --box-shadow-color #004D40
+            background-color #2e8f35   
 
