--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -149,6 +149,10 @@
 
         .user-list
             text-align center
+            .user-item
+                display inline
+                width 40px
+                height 32px
             //border-bottom 1px solid black
             //padding 1%
 
