--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -4,7 +4,7 @@
             .row.reports-header
                 h2.col-xs-12 Reports
             .row.generate-holder.center-xs
-                h3.col-xs-6 Quckly report generating
+                h3.col-xs-6.quick-title Quickly report generating
                 .col-xs-12
                    .row
                         span(ng-link = "['Reports Add']").button.btn.col-xs-4.col-xs-offset-4 Generate
@@ -14,7 +14,7 @@
                         span.chapter-title.col-xs-10 Recent
                             .fa.fa-clock-o
                     .row.center-xs
-                        table.col-xs-12.review-table(ng-show="reports.recentReports")
+                        table.col-xs-12.review-table(ng-show="reports.recentReports.length>0")
                             tr.row.t-head
                                 td.col-xs-3 Title
                                 td.col-xs-5 Description
@@ -27,9 +27,9 @@
                                     .row.around-xs
                                         span.col-xs-4.fa.fa-eye.button.f-btn.view-btn(ng-link = "['Reports Edit', {id: reports.recentReports[$index]._id}]")
                                         span.col-xs-4.fa.fa-trash.button.f-btn.delete-btn(ng-click='reports.deleteReport(reports.recentReports[$index]._id)')
-                        h4.col-xs-12.start-xs(ng-show="!reports.recentReports") You don't have reports yet
+                        h4.col-xs-12.center-xs(ng-show="reports.recentReports.length==0") You don't have reports yet
                     .row(ng-show="reports.recentReports")
-                        .col-xs-1.col-xs-offset-11.button.btn(ng-click='reports.manageMore("recent")' ng-hide="(reports._reports.length==reports.recentReports.length) && !reports.isRecentMore ") {{reports.isRecentMore ? 'Less' : 'More'}}
+                        .col-xs-1.col-xs-offset-11.button.btn( ng-click='reports.manageMore("recent")' ng-hide="((reports._reports.length==reports.recentReports.length) && !reports.isRecentMore) || reports.recentReports.length==0 ") {{reports.isRecentMore ? 'Less' : 'More'}}
             .row.reports-samples
                 .col-xs-12
                     .row.start-xs
@@ -61,7 +61,7 @@
                                     .col-xs-4
                                         span.row.item-def Dates:
                                     .col-xs-8
-                                        span.row.item-value {{r.dateRange[0]?undefined:r.dateRange[0] | date : 'dd/MM/y'}} - {{r.dateRange[1]?undefined:r.dateRange[1] | date : 'dd/MM/y'}}
+                                        span.row.item-value {{r.dateRange[0]?r.dateRange[0]:undefined | date : 'dd/MM/y'}} - {{r.dateRange[1]?r.dateRange[1]:undefined | date : 'dd/MM/y'}}
 
                     .row
                         .col-xs-1.col-xs-offset-11.button.btn(ng-click='reports.manageMore("saved")' ng-hide="(reports.savedReports.length==reports._saved.length) && !reports.isSavedMore ") {{reports.isSavedMore ? 'Less' : 'More'}}
