--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -153,6 +153,9 @@
                 display inline
                 width 40px
                 height 32px
+                img
+                    max-width 40px
+                    max-height 32px
             //border-bottom 1px solid black
             //padding 1%
 
