added border radius for avatar images

--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -156,8 +156,7 @@
                 img
                     max-width 40px
                     max-height 32px
-            //border-bottom 1px solid black
-            //padding 1%
+                    border-radius 5px
 
         .avatar
             background-color #f2992e
