--- a/frontend/components/events/eventCreate.component.styl
+++ b/frontend/components/events/eventCreate.component.styl
@@ -1,101 +1,244 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
-.eventsEdit-wrapper
+.eventsEditWrapper
+  main-component()
   width 100%
-  .main
-    padding 1%
-    border 1px solid border-grey
-    border-radius 10px
-    background-color background-white
-    box-shadow 0px 5px 20px 2px  #808080
-    font-family "Open Sans"
-    font-weight 400
-    font-size 23px
-    text-align justify
-    .head
-      font-family "Montserrat"
-      display flex
-      flex-direction row
-      justify-content space-between
-    .date
-      display flex
-      flex-direction row
-      justify-content space-between
-      margin-top 10px
-      margin-bottom 10px
-      
-      .dataPicker
-        .form-control
-          width 100%
-        .picker
-          display flex
-          flex-direction row
-          .time
-            width 30% 
-        a
-          height 34px
-    textarea
-      min-width 100%
-      height 150px
-    .participants
-        width 100%
-        display block-flex
-        flex-wrap wrap
-        justify-content center
+  min-width 400px
+  h1.header
+    header-style()
+    position relative
+    .return-btn
+        cursor pointer
+        display flex
         align-items center
-        select
-          max-width 80%
-          min-width 80%
-          border-radius 7px
-          border none
-          outline none
-          padding 8px
-          border 1px solid gray
-          color #333
-          &:hover
-            box-shadow: 0 0 7px #3498db
-        .participantCell
-          display flex
-          justify-content center
-          align-items center
-          margin-top 10px
-        .addButton
-          button()
-          margin 25px auto
-          font-size 1.2em
-          padding 0 0.5em
-          display flex
-          flex-wrap nowrap
-          justify-content space-between
-          i
-            display inline
-            font-size 1.2em
-            &:hover
-              color white
-            span
-              display: -moz-inline-stack;
-              display inline
-              font-family "Montserrat"
-              font-family 1em
-          .participant_wrapper
-            background-color #1d8dbf
-            display inline-flex
-            padding 10px
-            border-radius 8px
-            .participantTitle
-              color white
-              margin-right 10px
-            .deleteButton
-              i
-                font-size 25px
-                transition all 0.3s ease-out;
-                cursor pointer
-                &:hover
-                  color white
-    .period
-      display flex
-      flex-direction row
-      justify-content space-between
-      button
-        font-family "Montserrat"
-        button()
+        position absolute
+        font-size 20px
+        top 0
+        left 15%
+        i
+            font-size 48px
+            color #337ab7
+        a
+            text-decoration none
+            margin-left 10px
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            left 10%
+            a
+                display none
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            left 0    
+  .main
+    .title
+        input
+            outline none
+            border none
+            border-radius 4px
+            background-color disable-input
+            border-bottom 4px solid border-color
+            width 80%
+            font-size 25px
+            padding 5px
+            display block
+            color text-input
+            text-align center
+            margin 50px auto 5px
+            &:focus
+                background-color active-input
+            &:focus::-webkit-input-placeholder
+                color transparent
+            &:focus::-moz-placeholder
+                color transparent
+            &:focus:-ms-input-placeholder
+                color transparent
+            &:focus:-moz-placeholder
+                color transparent
+            @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+                width 90%
+            @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+                width 100%
+    .invalid_info
+        width 80%
+        margin 0 auto 30px
+        min-height 20px
+        cursor pointer
+        &:hover
+            p
+                opacity 1
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        p
+            transition opacity 0.3s ease-out
+            display inline-block
+            margin 0 7px
+            opacity 0.5
+            color #e57373
+    .date
+        width 80%
+        font-size 25px
+        color text-input
+        margin 50px auto 50px
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        .datecell
+            display flex
+            flex-wrap wrap
+            align-items center
+            margin-top 20px
+            h2
+                display inline-block
+                min-width 170px
+                @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+                    width 100%
+                margin 0
+            .picker
+                display inline-flex
+                align-items center
+                justify-content center
+                background-color disable-input
+                border-bottom 4px solid border-color
+                border-radius 4px
+                margin-left 10px
+                padding 7px
+                min-width 450px
+                .day
+                    font-size 0.6em
+                    display inline-block
+                a
+                    display inline-block
+                    margin 0 20px 0 10px 
+                    cursor pointer
+                    color text-input
+                    &:hover
+                        color #337ab7
+                .time
+                    margin-left 20px
+                    input
+                        background none
+                        outline none
+                        box-shadow none
+                        border none
+                        font-size 0.7em
+                        padding 6px 0
+                        padding-top 12px
+                        border-radius 1px
+                        width 30px
+                        border-bottom 2px solid border-color
+    .eventDescription
+        width 80%
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        margin 15px auto 5px
+        position relative
+        .eventEditor
+            width 100%
+            text-align left
+            padding 2em
+            font-size 1.3em
+            min-height 150px
+            font-family "Montserrat"
+            background-color disable-input
+            border-radius 12px
+            color text-input
+            border-bottom 4px solid border-color
+            outline none
+            &.placeholder
+                &:after
+                    display block
+            &:focus
+                background-color active-input
+                &:after
+                    display none
+
+            &:after
+                content 'Event Description'
+                position absolute
+                top 50%
+                left 50%
+                font-size 1.3em
+                pointer-events none
+                display none
+                color gray
+                font-family "Montserrat"
+                opacity 0.7
+                transform translateX(-50%) translateY(-50%)
+    //   .dataPicker
+    //     .form-control
+    //       width 100%
+    //     .picker
+    //       display flex
+    //       flex-direction row
+    //       .time
+    //         width 30% 
+    //     a
+    //       height 34px
+    // textarea
+    //   min-width 100%
+    //   height 150px
+    // .participants
+    //     width 100%
+    //     display block-flex
+    //     flex-wrap wrap
+    //     justify-content center
+    //     align-items center
+    //     select
+    //       max-width 80%
+    //       min-width 80%
+    //       border-radius 7px
+    //       border none
+    //       outline none
+    //       padding 8px
+    //       border 1px solid gray
+    //       color #333
+    //       &:hover
+    //         box-shadow: 0 0 7px #3498db
+    //     .participantCell
+    //       display flex
+    //       justify-content center
+    //       align-items center
+    //       margin-top 10px
+    //     .addButton
+    //       button()
+    //       margin 25px auto
+    //       font-size 1.2em
+    //       padding 0 0.5em
+    //       display flex
+    //       flex-wrap nowrap
+    //       justify-content space-between
+    //       i
+    //         display inline
+    //         font-size 1.2em
+    //         &:hover
+    //           color white
+    //         span
+    //           display: -moz-inline-stack;
+    //           display inline
+    //           font-family "Montserrat"
+    //           font-family 1em
+    //       .participant_wrapper
+    //         background-color #1d8dbf
+    //         display inline-flex
+    //         padding 10px
+    //         border-radius 8px
+    //         .participantTitle
+    //           color white
+    //           margin-right 10px
+    //         .deleteButton
+    //           i
+    //             font-size 25px
+    //             transition all 0.3s ease-out;
+    //             cursor pointer
+    //             &:hover
+    //               color white
+    // .period
+    //   display flex
+    //   flex-direction row
+    //   justify-content space-between
+    //   button
+    //     font-family "Montserrat"
+    //     button()
 
