checkin info avatar style

--- a/frontend/components/checkins/checkinsInfoStyles.styl
+++ b/frontend/components/checkins/checkinsInfoStyles.styl
@@ -52,6 +52,14 @@
         margin 10px
         padding 10px
         text-align center
+        .user-item
+                display inline
+                width 40px
+                height 32px
+                img
+                    max-width 40px
+                    max-height 32px
+                    border-radius 5px
 
     .avatar
         background-color #f2992e
