--- a/frontend/components/events/eventCreate.component.styl
+++ b/frontend/components/events/eventCreate.component.styl
@@ -90,8 +90,9 @@
             h2
                 display inline-block
                 min-width 170px
-                @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+                @media only screen  and (max-width : 850px), screen and (max-device-width: 850px)
                     width 100%
+                    margin-bottom 20px
                 margin 0
             .picker
                 display inline-flex
@@ -103,6 +104,10 @@
                 margin-left 10px
                 padding 7px
                 min-width 450px
+                @media only screen  and (max-width : 850px), screen and (max-device-width: 850px)
+                    width 100%
+                    min-width 350px
+                    justify-content flex-start
                 .day
                     font-size 0.6em
                     display inline-block
@@ -115,6 +120,8 @@
                         color #337ab7
                 .time
                     margin-left 20px
+                    @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
+                        margin-left 0
                     input
                         background none
                         outline none
@@ -166,6 +173,108 @@
                 font-family "Montserrat"
                 opacity 0.7
                 transform translateX(-50%) translateY(-50%)
+    .participants
+        width 80%
+        @media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+            width 90%
+        @media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+            width 100%
+        display flex
+        align-items flex-start
+        align-content flex-start
+        flex-wrap wrap
+        font-size 22px
+        min-height 75px
+        margin 15px auto 25px
+        .btn-group.ng-enter,.btn-group.ng-leave
+            -webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            position: relative;
+            display: inline-flex;
+        .btn-group.ng-enter,.btn-group.ng-leave.ng-leave-active
+            opacity 1
+            span
+                text-overflow clip
+                max-width 0px
+            .participant
+                border-bottom 0px solid border-color
+                transform translateY(8px)
+        .btn-group.ng-leave,.btn-group.ng-enter.ng-enter-active
+            opacity 1
+            span
+                text-overflow clip
+                max-width 360px
+            .participant
+                border-bottom 4px solid border-color
+                transform translateY(0)
+        .participant 
+            background-color disable-input
+            border none
+            border-bottom 4px solid border-color
+            border-radius 4px
+            color text-input
+            max-width 360px
+            padding 7px 18px
+            padding-right 12px
+            text-align center
+            text-decoration none
+            display inline-flex
+            justify-content center
+            align-items center
+            font-size 0.8em
+            margin 10px 7px
+            cursor pointer
+            -webkit-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            span
+                display block
+                white-space nowrap
+                overflow hidden
+                text-overflow ellipsis
+                -webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+                -moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+                -ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+                -o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+                transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            i
+                margin-left 10px
+                font-size 1.2em
+            &:hover
+                border-bottom 8px solid border-color
+                transform translateY(-2px)
+                margin 8px 7px
+                i
+                    color #e57373
+        .add
+            padding-right 18px
+            padding-left 12px
+            height auto
+            i
+                margin-right 10px
+                color #4DB6AC
+            &:hover
+                i
+                    color #4DB6AC
+    .sendBtn
+        display flex
+        justify-content center
+        align-content center
+        button
+            align-self center
+            display flex
+            justify-content center
+            button()
+            font-family "Montserrat"
+            font-size 24px
+            padding 15px 50px
+            --box-shadow-color #004D40
+            background-color #2e8f35   
     //   .dataPicker
     //     .form-control
     //       width 100%
