Added background color for comment

--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -53,3 +53,5 @@
             button()
         .comment-button
             font-family "Montserrat"
+            --box-shadow-color #004d40
+            background-color #2e8f35
