--- a/frontend/components/comments/eventsComments.template.pug
+++ b/frontend/components/comments/eventsComments.template.pug
@@ -10,7 +10,7 @@
             ul.col-xs-12
               li.row(ng-repeat="comment in $ctrl.comments track by $index")
                 .col-xs-1
-                  img(ng-if="comment.author && comment.author.avatar" src="comment.author.avatar")
+                  img(ng-if="comment.author && comment.author.avatar" src="{{comment.author.avatar}}")
                   .user-icon.fa.fa-user(ng-if="!comment.author || !comment.author.avatar")
                 |                         
                 .col-xs-9
