--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -12,6 +12,13 @@
         border-radius 10px
         background-color background-white 
         box-shadow 0px 5px 20px 2px  #808080
+        .comments-body
+            .avatar
+                img
+                    margin-top 10%
+                    text-align center
+                    width 100%
+                    border-radius 10px
         .comments-header 
             border-bottom 1px solid grey
             padding 1%
