--- a/frontend/components/comments/eventsComments.template.pug
+++ b/frontend/components/comments/eventsComments.template.pug
@@ -5,7 +5,7 @@
             span.col-xs-11 Comments
             |                     
             .middle-xs.col-xs-1
-              i.fa.fa-close.button(ng-link='["{{$ctrl.backLink}}"]')
+              i.fa.fa-times.button(ng-link='["{{$ctrl.backLink}}"]')
           |                 
           .row.comments-body
             ul.col-xs-12
