--- a/frontend/components/reports/reportEdit.template.pug
+++ b/frontend/components/reports/reportEdit.template.pug
@@ -81,7 +81,7 @@
                                                 .col-xs-4(ng-show='h._type=="checkin"') Question
                                                 .col-xs-4(ng-show='(h._type!="checkin" && h._type!="event")') Author
                                                 .col-xs-4(ng-show='h._type=="event"')
-                                                .col-xs-1.fa.fa-eye.button.f-btn
+                                                //.col-xs-1.fa.fa-eye.button.f-btn
                                             .row.his-body
                                                 .col-xs-3 {{h._type.toUpperCase()}}
                                                 .col-xs-4 {{h.title}}
