--- a/frontend/components/answerCheckin/answer.template.pug
+++ b/frontend/components/answerCheckin/answer.template.pug
@@ -1,6 +1,6 @@
 div.answer-checkin-wrapper
     label(for='answer-filter') Select checkins: 
-    select#answer-filter( ng-init="answr.selectedAnswer = answr.options[0]", ng-model='answr.selectedAnswer', ng-options='item for item in answr.options', ng-selected='answr.options[0]', ng-change='answr.filterAnswers()')
+    select#answer-filter( ng-init="answr.selectedAnswer = answr.options[0]", ng-model='answr.selectedAnswer', ng-options='item for item in answr.options')
     div(ng-if="answr.selectedAnswer=='all'", ng-repeat="checkin in answr.checkins track by $index") 
         p <b>{{checkin.question}}</b>
         span(ng-if="checkin.answers.length==0") There are no place to answer yet, dude.
